--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -105,32 +105,33 @@ message.custom.stats=<b>Очередь</b>\n\
 Все: <b>{5}</b>\n\n\
 <b>Активность</b>\n\
 Сегодня: <b>{6}</b>
-message.queue.stats=<b>Очередь</b>\n\
-<b>Сегодня</b>\n\
-Обрабатывается: {0}\n\
-В ожидании: {1}\n\
-Ошибок: {2}\n\
-Обработано: {3}\n\
-Активность: {4}\n\
-<b>За все время</b>\n\
-Ошибок: {5}\n\n\
+message.queue.stats=<b>Queue</b>\n\
+<b>Today</b>\n\
+Processing: {0}\n\
+Waiting: {1}\n\
+Errors: {2}\n\
+Completed: {3}\n\
+Activity: {4}\n\
+<b>All time</b>\n\
+Errors: {5}\n\n\
 <b>Downloads</b>\n\
-<b>Сегодня</b>\n\
-Обрабатывается: {6}\n\
-В ожидании: {7}\n\
-Ошибок: {8}\n\
-Обработано: {9}\n\
-<b>За все время</b>\n\
-Ошибок: {10}\n\
-Wrong file ids: {11}\n\n\
+<b>Today</b>\n\
+Processing: {6}\n\
+Waiting: {7}\n\
+Max next run at: {8}\n\
+Errors: {9}\n\
+Completed: {10}\n\
+<b>All time</b>\n\
+Errors: {11}\n\
+Wrong file ids: {12}\n\n\
 <b>Uploads</b>\n\
-<b>Сегодня</b>\n\
-Обрабатывается: {12}\n\
-В ожидании: {13}\n\
-Ошибок: {14}\n\
-Обработано: {15}\n\
-<b>За все время</b>\n\
-Ошибок: {16}
+<b>Today</b>\n\
+Processing: {13}\n\
+Waiting: {14}\n\
+Errors: {15}\n\
+Completed: {16}\n\
+<b>All time</b>\n\
+Errors: {17}
 message.work.thread.pool.stats=Heavy core pool size: {0}\n\
 Light core pool size: {1}\n\
 Heavy active count: {2}\n\
