Pdf to png, jpg отладка

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -160,3 +160,5 @@ Result file id: <b>{8}</b>
 max.file.size=I can''t handle files bigger than <b>{0}</b>. Please, try again later.
 message.dont.send.new.request=Don't send a new file, otherwise the current request will be canceled.
 extra.message.dont.send.new.request=Please don't send a new file until your last request is complete, otherwise it will be canceled.
+message.pdf.images.unzip.bot=Here is the archive with all images. I can't send all images directly to avoid telegram flood wait. \
+You can extract it with @SmartUnzipperBot.
