--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -163,3 +163,5 @@ message.video.compress.queued=Видео будет сжато\n\
 max.file.size=Я не могу обработать файлы больше чем <b>{0}</b>. Пожалуйста, попробуйте позже.
 message.dont.send.new.request=Не отправляйте новый файл, иначе текущий запрос будет отменен.
 extra.message.dont.send.new.request=Пожалуйста, не отправляйте новый файл, пока ваш последний запрос не будет завершен, иначе он будет отменен.
+message.pdf.images.unzip.bot=Вот архив со всеми изображениями. Я не могу отправить картинки напрямую, чтобы избежать telegram flood wait. \
+Вы можете извлечь его в @SmartUnzipperBot.
