--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,7 +12,7 @@ message.error=Something went wrong. <b>Please, report the incident to</b> <a hre
 message.empty.file.name=File
 message.choose.another.format=Choose another format
 message.choose.target.extension.default.conversion=Great! I can convert it. Choose type for converting on the keyboard. Keep sending files if you want to combine them into 1 format. \
-For example images to pdf.
+For example images to pdf or merge pdf files.
 message.choose.target.extension.video.audio.conversion=Great! I can convert it. Choose type for converting on the keyboard.
 go.back.command.name=\u2B05Back
 message.bot.restarted=The bot was restarted. <b>Please, retry the request.</b>
