yesterday users activity

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -141,7 +141,9 @@ Processing light: {5}\n\
 Ready heavy: {6}\n\
 Ready light: {7}\n\
 Processing: {8}
-message.global.stats=<b>Активность:</b> {0}
+message.global.stats=<b>Активность</b>\n\
+Сегодня: {0}\n\
+Вчера: {1}
 retry.command.description=Попробовать еще раз
 message.retry.answer=Пробую еще раз
 message.current.tasks.canceled=Ваши предыдущие конвертации отменены и добавлена новая конвертация
