--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -134,7 +134,9 @@ Processing light: {5}\n\
 Ready heavy: {6}\n\
 Ready light: {7}\n\
 Processing: {8}
-message.global.stats=<b>Activity</b>: {0}
+message.global.stats=<b>Activity</b>\n\
+Today: {0}\n\
+Yesterday: {0}
 message.custom.stats=<b>Queue</b>\n\
 Processing: <b>{0}</b>\n\
 Waiting: <b>{1}</b>\n\
