--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -108,30 +108,32 @@ message.custom.stats=<b>Очередь</b>\n\
 message.queue.stats=<b>Queue</b>\n\
 <b>Today</b>\n\
 Processing: {0}\n\
-Waiting: {1}\n\
-Errors: {2}\n\
-Completed: {3}\n\
-Activity: {4}\n\
+Min last run at: {1}\n\
+Waiting: {2}\n\
+Min create at: {3}\n\
+Errors: {4}\n\
+Completed: {5}\n\
+Activity: {6}\n\
 <b>All time</b>\n\
-Errors: {5}\n\n\
+Errors: {7}\n\n\
 <b>Downloads</b>\n\
 <b>Today</b>\n\
-Processing: {6}\n\
-Waiting: {7}\n\
-Max next run at: {8}\n\
-Errors: {9}\n\
-Completed: {10}\n\
-<b>All time</b>\n\
+Processing: {8}\n\
+Waiting: {9}\n\
+Max next run at: {10}\n\
 Errors: {11}\n\
-Wrong file ids: {12}\n\n\
+Completed: {12}\n\
+<b>All time</b>\n\
+Errors: {13}\n\
+Wrong file ids: {14}\n\n\
 <b>Uploads</b>\n\
 <b>Today</b>\n\
-Processing: {13}\n\
-Waiting: {14}\n\
-Errors: {15}\n\
-Completed: {16}\n\
+Processing: {15}\n\
+Waiting: {16}\n\
+Errors: {17}\n\
+Completed: {18}\n\
 <b>All time</b>\n\
-Errors: {17}
+Errors: {19}
 message.work.thread.pool.stats=Heavy core pool size: {0}\n\
 Light core pool size: {1}\n\
 Heavy active count: {2}\n\
