--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -113,3 +113,11 @@ cancel.merge.pdfs.command.name=Отменить файлы
 message.merge.pdfs.canceled=Отменено <b>{0}</b> файлов
 message.merge.pdfs.non.pdf.file=Отправьте мне pdf файлы
 message.merge.pdfs.min.2.files=Вам нужно отправить 2 или более файлов для объединения.
+message.audio.compression.settings=Режим: {0}\n\
+Bit rate: {1}
+audio.compression.mode.auto.command.name=Автоматически
+audio.compression.mode.manual.command.name=Вручную
+audio.compression.bit.rate.command.name=Bit rate
+audio.compression.compress.command.name=Сжать
+message.audio.compress.welcome=Отправьте мне аудио для сжатия
+message.audio.compress.file.not.found=Сначала отправьте аудио для сжатия
