Сделал смену состояний и сохранение настроек сжатия аудио

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -111,8 +111,9 @@ message.merge.pdfs.min.2.files=You must to send 2 or more files to merge.
 message.audio.compression.settings=Mode: {0}\n\
 Bit rate: {1}
 audio.compression.mode.auto.command.name=Auto
-audio.compression.mode.manual.command.name=Manually
+audio.compression.mode.manually.command.name=Manually
 audio.compression.bit.rate.command.name=Bit rate
 audio.compression.compress.command.name=Compress
 message.audio.compress.welcome=Send me an audio to compress
 message.audio.compress.file.not.found=At first send me an audio to compress
+message.audio.compression.mode.auto.chose=Auto compression mode chose
