Убрал состояния и сделал по простому

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -113,12 +113,10 @@ cancel.merge.pdfs.command.name=Отменить файлы
 message.merge.pdfs.canceled=Отменено <b>{0}</b> файлов
 message.merge.pdfs.non.pdf.file=Отправьте мне pdf файлы
 message.merge.pdfs.min.2.files=Вам нужно отправить 2 или более файлов для объединения.
-message.audio.compression.settings=Режим: {0}\n\
-Bit rate: {1}
-audio.compression.mode.auto.command.name=Автоматически
-audio.compression.mode.manually.command.name=Вручную
-audio.compression.bit.rate.command.name=Bit rate
+message.audio.compression.settings=Bit rate: {0}
+audio.compression.mode.auto.command.name=Auto
 audio.compression.compress.command.name=Сжать
 message.audio.compress.welcome=Отправьте мне аудио для сжатия
 message.audio.compress.file.not.found=Сначала отправьте аудио для сжатия
-message.audio.compression.mode.auto.chose=Режим сжатия Auto выбран
+message.audio.compression.auto.bitrate.chose=Bitrate auto выбран
+message.audio.compression.auto.bitrate=Пришлите <b>bitrate</b> или он будет вычислен <b>автоматически</b>
