--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -114,4 +114,4 @@ audio.compression.compress.command.name=Compress
 message.audio.compress.welcome=Send me an audio to compress
 message.audio.compress.file.not.found=At first send me an audio to compress
 message.audio.compression.auto.bitrate.chose=Auto bitrate chose
-message.audio.compression.auto.bitrate=Send the <b>bitrate</b> or it will be calculated <b>automatically</b>
+message.audio.compression.auto.bitrate=Send a <b>bitrate</b> or it will be calculated <b>automatically</b>
