Отладка сжатия + вынес кнопку Compress в inline

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,7 +4,7 @@ message.files.queued=The files will be converted to <b>{0}</b>\n\
 Global queue position: <b>{1}</b>
 message.merge.files.queued=The files will be merged to one\n\
 Global queue position: <b>{0}</b>
-message.video.compress.queued=The video will be compressed\n\
+message.compress.queued=The file will be compressed\n\
 Global queue position: <b>{0}</b>
 message.file.format=Format: <b>{0}</b>
 message.file.size=Size: <b>{0}</b>
@@ -111,7 +111,7 @@ message.merge.pdfs.min.2.files=You must to send 2 or more files to merge.
 message.audio.compression.settings=Bit rate: {0}
 audio.compression.mode.auto.command.name=Auto
 audio.compression.compress.command.name=Compress
-message.audio.compress.welcome=Send me an audio to compress
+message.audio.compress.welcome=Send me an audio to compress. Only the last sent file will be compressed.
 message.audio.compress.file.not.found=At first send me an audio to compress
 message.audio.compression.auto.bitrate.chose=Auto bitrate chose
 message.audio.compression.auto.bitrate=Send a <b>bitrate</b> or it will be calculated <b>automatically</b>
