--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -113,10 +113,12 @@ cancel.merge.pdfs.command.name=Отменить файлы
 message.merge.pdfs.canceled=Отменено <b>{0}</b> файлов
 message.merge.pdfs.non.pdf.file=Отправьте мне pdf файлы
 message.merge.pdfs.min.2.files=Вам нужно отправить 2 или более файлов для объединения.
-message.audio.compression.settings=Bit rate: {0}
+message.audio.compression.settings=Bit rate: {0} (K)
 audio.compression.mode.auto.command.name=Auto
 audio.compression.compress.command.name=Сжать
 message.audio.compress.welcome=Отправьте мне аудио для сжатия. Только последнее отправленное аудио будет сжато.
 message.audio.compress.file.not.found=Сначала отправьте аудио для сжатия
 message.audio.compression.auto.bitrate.chose=Bitrate auto выбран
-message.audio.compression.auto.bitrate=Пришлите <b>bitrate</b> или он будет вычислен <b>автоматически</b>
+message.audio.compression.auto.bitrate=Пришлите <b>bitrate</b>(например 16, 32, 96...) или он будет вычислен <b>автоматически</b>
+message.audio.compression.bitrate.out.of.range=Пожалуйста, выберите значение больше 0
+message.audio.compression.invalid.bitrate=Пришлите <b>bitrate</b>. Например 16, 32, 96...
