--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -55,8 +55,11 @@ message.convert.document.file=Send me a file, link or text which you want to con
 message.convert.video.file=Send me a video which you want to convert.
 message.convert.audio.file=Send me an audio which you want to convert.
 message.conversion.failed=Something went wrong. The query can't be processed now. The problem will be resolved soon, and the file will be sent. \
-<b>Thank you for your patience.</b>
-message.damaged.file=File is <b>damaged</b> or has <b>incorrect format</b>. It can't be converted. Perhaps the developers will fix a problem and I can send your file later.
+<b>Thank you for your patience</b>. <b>Please, report the incident to</b> <a href="https://t.me/joinchat/CjVj_EzQLxLgL02jmUdW7A"> \
+Customer service</a>.
+message.damaged.file=File is <b>damaged</b> or has <b>incorrect format</b> or <b>you have sent incorrect settings(for example bitrate)</b>. \
+It can't be converted. Perhaps the developers will fix a problem and I can send your file later. <b>Please, report the incident to</b> \
+<a href="https://t.me/joinchat/CjVj_EzQLxLgL02jmUdW7A"> Customer service</a>.
 message.incompressible.video=I can't compress this video
 convert.command.description=conversion
 language.command.description=change language
@@ -117,3 +120,4 @@ message.audio.compression.auto.bitrate.chose=Auto bitrate chose
 message.audio.compression.auto.bitrate=Send me a <b>bitrate</b>(for example 16, 32, 96...) or it will be calculated <b>automatically</b>
 message.audio.compression.bitrate.out.of.range=Please choose a value greater then 0
 message.audio.compression.invalid.bitrate=Send me a <b>bitrate</b>. For example 16, 32, 96...
+compress.audio.command.description=Compress audio
