Убрал auto из сжатия аудио

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -111,13 +111,11 @@ message.merge.pdfs.canceled=Canceled <b>{0}</b> files
 message.merge.pdfs.non.pdf.file=Send me pdf files
 merging.step=Merging
 message.merge.pdfs.min.2.files=You must to send 2 or more files to merge.
-message.audio.compression.settings=Bit rate: {0} (K)
-audio.compression.mode.auto.command.name=Auto
+message.audio.compression.settings=Bit rate: {0}K
 audio.compression.compress.command.name=Compress
 message.audio.compress.welcome=Send me an audio to compress. Only the last sent file will be compressed.
 message.audio.compress.file.not.found=At first send me an audio to compress
-message.audio.compression.auto.bitrate.chose=Auto bitrate chose
-message.audio.compression.auto.bitrate=Send me a <b>bitrate</b>(for example 16, 32, 96...) or it will be calculated <b>automatically</b>
+message.audio.compression.choose.bitrate=Send me a <b>bitrate</b> and click <b>Compress</b>. For example 16, 32, 64, 96...\n\n\
+The lower the bitrate, the smaller the output file size will be and the lower quality will be.
 message.audio.compression.bitrate.out.of.range=Please choose a value greater then 0
-message.audio.compression.invalid.bitrate=Send me a <b>bitrate</b>. For example 16, 32, 96...
 compress.audio.command.description=Compress audio
