Конвертация в opus при сжатии

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -111,11 +111,17 @@ message.merge.pdfs.canceled=Canceled <b>{0}</b> files
 message.merge.pdfs.non.pdf.file=Send me pdf files
 merging.step=Merging
 message.merge.pdfs.min.2.files=You must to send 2 or more files to merge.
-message.audio.compression.settings=Bit rate: {0}K
+message.audio.compression.bitrate=Bit rate: <b>{0}K</b>
 audio.compression.compress.command.name=Compress
 message.audio.compress.welcome=Send me an audio to compress. Only the last sent file will be compressed.
 message.audio.compress.file.not.found=At first send me an audio to compress
-message.audio.compression.choose.bitrate=Send me a <b>bitrate</b> and click <b>Compress</b>. For example 16, 32, 64, 96...\n\n\
-The lower the bitrate, the smaller the output file size will be and the lower quality will be.
+message.audio.compression.choose.bitrate=Send me a <b>bitrate</b> and click <b>Compress</b>. For example 16, 32, 64, 96...
 message.audio.compression.bitrate.out.of.range=Please choose a value greater then 0
 compress.audio.command.description=Compress audio
+message.audio.compress.opus.conversion=Convert to: <b>OPUS</b>
+message.audio.compress.prompt.opus.set=\ud83d\udca1<i>Opus is the most compressed format. Click <b>\u274cOpus</b> to cancel opus conversion.</i>
+message.audio.compress.prompt.opus=\ud83d\udca1<i>Opus is the most compressed format.</i>
+message.audio.compress.prompt.opus.canceled=\ud83d\udca1<i>Opus is the most compressed format. Click <b>\u2705Opus</b> for opus conversion.</i>
+message.audio.compress.prompt.bitrate=\ud83d\udca1<i>The lower the bitrate, the smaller the output file size will be and the lower quality will be.</i>
+audio.compress.cancel.opus.command.description=\u274cOpus
+audio.compress.opus.command.description=\u2705Opus
