--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -117,11 +117,17 @@ cancel.merge.pdfs.command.name=Отменить файлы
 message.merge.pdfs.canceled=Отменено <b>{0}</b> файлов
 message.merge.pdfs.non.pdf.file=Отправьте мне pdf файлы
 message.merge.pdfs.min.2.files=Вам нужно отправить 2 или более файлов для объединения.
-message.audio.compression.settings=Bit rate: {0}K
+message.audio.compression.bitrate=Bit rate: <b>{0}K</b>
 audio.compression.compress.command.name=Сжать
 message.audio.compress.welcome=Отправьте мне аудио для сжатия. Только последнее отправленное аудио будет сжато.
 message.audio.compress.file.not.found=Сначала отправьте аудио для сжатия
-message.audio.compression.choose.bitrate=Пришлите <b>bitrate</b> и нажмите <b>Сжать</b>. Например 16, 32, 96...\n\n\
-Чем ниже битрейт, тем меньше будет размер выходного файла и тем ниже будет качество.
+message.audio.compression.choose.bitrate=Пришлите <b>bitrate</b> и нажмите <b>Сжать</b>. Например 16, 32, 96...
 message.audio.compression.bitrate.out.of.range=Пожалуйста, выберите значение больше 0
 compress.audio.command.description=Сжать аудио
+message.audio.compress.opus.conversion=Сконвертировать в: <b>OPUS</b>
+message.audio.compress.prompt.opus.set=\ud83d\udca1<i>Opus-самый сжатый формат. Нажмите <b>\u274cOpus</b>, чтобы отменить конвертацию в формат opus.</i>
+message.audio.compress.prompt.opus.cancel=\ud83d\udca1<i>Opus-самый сжатый формат. Нажмите <b>\u2705Opus</b> для конвертации в формат opus.</i>
+message.audio.compress.prompt.bitrate=\ud83d\udca1<i>Чем ниже битрейт, тем меньше будет размер выходного файла и тем ниже будет качество.</i>
+audio.compress.cancel.opus.command.description=\u274cOpus
+audio.compress.opus.command.description=\u2705Opus
+message.audio.compress.prompt.opus=\ud83d\udca1<i>Opus-самый сжатый формат.</i>
