--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -125,3 +125,6 @@ message.audio.compress.prompt.opus.canceled=\ud83d\udca1<i>Opus is the most comp
 message.audio.compress.prompt.bitrate=\ud83d\udca1<i>The lower the bitrate, the smaller the output file size will be and the lower quality will be.</i>
 audio.compress.cancel.opus.command.description=\u274cOpus
 audio.compress.opus.command.description=\u2705Opus
+message.audio.compress.opus.estimated.size=Estimated size: <b>{0}</b>
+message.audio.compress.original.size=Original size: <b>{0}</b>
+message.audio.compress.audio.format=Format: <b>{0}</b>
