Фиксы сжатия видео + сообщение о конечном размере и начальном

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -128,3 +128,5 @@ audio.compress.opus.command.description=\u2705Opus
 message.audio.compress.opus.estimated.size=Estimated size: <b>{0}</b>
 message.audio.compress.original.size=Original size: <b>{0}</b>
 message.audio.compress.audio.format=Format: <b>{0}</b>
+message.compressed.size=Original size: <b>{0}</b>\n\
+Compressed size: <b>{1}</b>
