Сделал: команду для редактирования видео отправку приветственного сообщения отправку keyboard клавиатуры

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -130,3 +130,4 @@ message.audio.compress.original.size=Original size: <b>{0}</b>
 message.audio.compress.audio.format=Format: <b>{0}</b>
 message.compressed.size=Original size: <b>{0}</b>\n\
 Compressed size: <b>{1}</b>
+message.video.edit.welcome=Send me a video to change resolution. Only the last sent video will be edited.
