--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -136,3 +136,4 @@ message.audio.compress.original.size=Размер до сжатия: <b>{0}</b>
 message.audio.compress.audio.format=Формат: <b>{0}</b>
 message.compressed.size=Оригинальный размер: <b>{0}</b>\n\
 Размер после сжатия: <b>{1}</b>
+message.video.edit.welcome=Отправьте мне видео для изменения разрешения. Только последнее отправленное видео будет изменено.
