Сделал: Сохранение отправленного видео Отправку сообщения с настройками Отправку клавиатуры с доступными разрешениями

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -137,3 +137,5 @@ message.audio.compress.audio.format=Формат: <b>{0}</b>
 message.compressed.size=Оригинальный размер: <b>{0}</b>\n\
 Размер после сжатия: <b>{1}</b>
 message.video.edit.welcome=Отправьте мне видео для изменения разрешения. Только последнее отправленное видео будет изменено.
+message.video.edit.settings=Изменить разрешение на: <b>{0}</b>\n\n\
+Выберите разрешение на клавиатуре:
