--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -131,3 +131,5 @@ message.audio.compress.audio.format=Format: <b>{0}</b>
 message.compressed.size=Original size: <b>{0}</b>\n\
 Compressed size: <b>{1}</b>
 message.video.edit.welcome=Send me a video to change resolution. Only the last sent video will be edited.
+message.video.edit.settings=Change resolution to: <b>{0}</b>\n\n\
+Choose video resolution on the keyboard:
