Добавить кнопку Изменить разрешение

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -133,3 +133,4 @@ Compressed size: <b>{1}</b>
 message.video.edit.welcome=Send me a video to change resolution. Only the last sent video will be edited.
 message.video.edit.settings=Change resolution to: <b>{0}</b>\n\n\
 Choose video resolution on the keyboard:
+edit.video.command.description=Change resolution
