--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -139,3 +139,4 @@ message.compressed.size=Оригинальный размер: <b>{0}</b>\n\
 message.video.edit.welcome=Отправьте мне видео для изменения разрешения. Только последнее отправленное видео будет изменено.
 message.video.edit.settings=Изменить разрешение на: <b>{0}</b>\n\n\
 Выберите разрешение на клавиатуре:
+edit.video.command.description=Изменить разрешение
