Добавил отправку сообщения что надо выбрать разрешения на клавиатуре Добавил отправку сообщения что надо отправть видео сначала для редактирования

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -134,3 +134,6 @@ message.video.edit.welcome=Send me a video to change resolution. Only the last s
 message.video.edit.settings=Change resolution to: <b>{0}</b>\n\n\
 Choose video resolution on the keyboard:
 edit.video.command.description=Change resolution
+message.choose.video.resolution=Choose resolution on the keyboard
+message.resolution.selected=Resolution selected
+message.send.video.to.edit=Send me a video to change resolution
