Добавил удаление клавиатуры при выходе с команды Добавил проверку что файл отправленный это видео Добавил информацию о том что надо нажать на Изменить разрешение

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -138,8 +138,8 @@ message.compressed.size=Оригинальный размер: <b>{0}</b>\n\
 Размер после сжатия: <b>{1}</b>
 message.video.edit.welcome=Отправьте мне видео для изменения разрешения. Только последнее отправленное видео будет изменено.
 message.video.edit.settings=Изменить разрешение на: <b>{0}</b>\n\n\
-Выберите разрешение на клавиатуре:
+Выберите разрешение на клавиатуре и нажмите на <b>Изменить разрешение</b>
 edit.video.command.description=Изменить разрешение
 message.choose.video.resolution=Выберите разрешение на клавиатуре
 message.resolution.selected=Разрешение выбрано
-message.send.video.to.edit=Отправьте мне видео для изменения разрешения
+message.send.video.to.edit=Для начала отправьте мне видео для изменения разрешения
