--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -132,8 +132,8 @@ message.compressed.size=Original size: <b>{0}</b>\n\
 Compressed size: <b>{1}</b>
 message.video.edit.welcome=Send me a video to change resolution. Only the last sent video will be edited.
 message.video.edit.settings=Change resolution to: <b>{0}</b>\n\n\
-Choose video resolution on the keyboard:
+Choose video resolution on the keyboard and click <b>Change resolution</b>
 edit.video.command.description=Change resolution
 message.choose.video.resolution=Choose resolution on the keyboard
 message.resolution.selected=Resolution selected
-message.send.video.to.edit=Send me a video to change resolution
+message.send.video.to.edit=At first send me a video to change resolution
