Сделал более красивую отправку сообщения при редактировании видео

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -127,13 +127,16 @@ audio.compress.cancel.opus.command.description=\u274cOpus
 audio.compress.opus.command.description=\u2705Opus
 message.audio.compress.opus.estimated.size=Estimated size: <b>{0}</b>
 message.audio.compress.original.size=Original size: <b>{0}</b>
-message.audio.compress.audio.format=Format: <b>{0}</b>
 message.compressed.size=Original size: <b>{0}</b>\n\
 Compressed size: <b>{1}</b>
 message.video.edit.welcome=Send me a video to change resolution. Only the last sent video will be edited.
-message.video.edit.settings=Change resolution to: <b>{0}</b>\n\n\
-Choose video resolution on the keyboard and click <b>Change resolution</b>
+message.video.edit.settings.resolution=Change resolution to: <b>{0}</b>
+message.video.edit.settings.current.resolution=Current resolution: <b>{0}</b>
+message.video.edit.settings.choose.resolution=Choose video resolution on the keyboard and click <b>Change resolution</b>
 edit.video.command.description=Change resolution
 message.choose.video.resolution=Choose resolution on the keyboard
 message.resolution.selected=Resolution selected
 message.send.video.to.edit=At first send me a video to change resolution
+message.video.will.be.edited=video resolution will be changed\n\
+Global queue position: <b>{0}</b>
+video.editing.step=Changing resolution
