--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -133,13 +133,16 @@ audio.compress.opus.command.description=\u2705Opus
 message.audio.compress.prompt.opus=\ud83d\udca1<i>Opus-самый сжатый формат.</i>
 message.audio.compress.opus.estimated.size=Размер после сжатия: <b>{0}</b>
 message.audio.compress.original.size=Размер до сжатия: <b>{0}</b>
-message.audio.compress.audio.format=Формат: <b>{0}</b>
 message.compressed.size=Оригинальный размер: <b>{0}</b>\n\
 Размер после сжатия: <b>{1}</b>
 message.video.edit.welcome=Отправьте мне видео для изменения разрешения. Только последнее отправленное видео будет изменено.
-message.video.edit.settings=Изменить разрешение на: <b>{0}</b>\n\n\
-Выберите разрешение на клавиатуре и нажмите на <b>Изменить разрешение</b>
+message.video.edit.settings.resolution=Изменить разрешение на: <b>{0}</b>
+message.video.edit.settings.current.resolution=Текущее разрешение: <b>{0}</b>
+message.video.edit.settings.choose.resolution=Выберите разрешение на клавиатуре и нажмите на <b>Изменить разрешение</b>
 edit.video.command.description=Изменить разрешение
 message.choose.video.resolution=Выберите разрешение на клавиатуре
 message.resolution.selected=Разрешение выбрано
 message.send.video.to.edit=Для начала отправьте мне видео для изменения разрешения
+message.video.will.be.edited=Разрешение видео будет изменено\n\
+Место в глобальной очереди: <b>{0}</b>
+video.editing.step=Изменение разрешения
