Сделал проверку что разрешение видео не такое же как текущее иначе менять смысла нет

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -140,3 +140,7 @@ message.send.video.to.edit=At first send me a video to change resolution
 message.video.will.be.edited=video resolution will be changed\n\
 Global queue position: <b>{0}</b>
 video.editing.step=Changing resolution
+video.editing.resolution.changed=Original resolution: <b>{0}</b>\n\
+Result resolution: <b>{1}</b>
+message.video.resolution.the.same=Video already has the same resolution <b>{0}</b>
+message.video.resolution.the.same.choose.another.on.the.keyboard=Video already has the same resolution {0}. Choose another resolution on the keyboard
