Добавил конвертацию в stream на клавиатуру

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -143,4 +143,7 @@ video.editing.step=Changing resolution
 video.editing.resolution.changed=Original resolution: <b>{0}</b>\n\
 Result resolution: <b>{1}</b>
 message.video.resolution.the.same=Video already has the same resolution <b>{0}</b>
-message.video.resolution.the.same.choose.another.on.the.keyboard=Video already has the same resolution {0}. Choose another resolution on the keyboard
+message.video.resolution.cant.be.increased=Video resolution can''t be increased. The video has resolution <b>{0}</b> but you have chosen <b>{1}</b>.
+message.video.resolution.cant.be.increased.answer=Video resolution can''t be increased. The video has resolution {0} but you have chosen {1}. \
+Choose another resolution on the keyboard
+message.video.resolution.the.same.answer=Video already has the same resolution {0}. Choose another resolution on the keyboard
