--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -14,9 +14,9 @@ message.choose.target.extension.default.conversion=Отлично я могу с
 Например картинки в pdf или объединить pdf файлы.
 message.choose.target.extension.video.audio.conversion=Отлично я могу сконвертировать это! Выберите тип на клавиатуре для конвертации.
 message.unsupported.format=Пока я не умею работать с файлами данного формата. Список поддерживаемых форматов вы \
-можете найти в статье <a href="https://tgraph.io/Formats-05-14">Бот SmartFileUtils.</a>
+можете найти в статье <a href="https://tgraph.io/Formats-05-14">Бот SmartFileUtils</a>.
 message.unsupported.file=Пока я не умею работать с файлами данного формата. Майм тип вашего файла <b>{0}</b>. Список поддерживаемых форматов вы \
-можете найти в статье <a href="https://tgraph.io/Formats-05-14">Бот SmartFileUtils.</a>
+можете найти в статье <a href="https://tgraph.io/Formats-05-14">Бот SmartFileUtils</a>.
 message.query.item.not.found=Запрос не найден. Либо уже был завершен, либо отменен, либо вы отправили новый файл, когда я выполнял конвертацию этого файла.
 message.welcome=Приветствуем вас в <b>бесплатном</b> боте конвертере. \n\n\
 Инструкцию по работе с ботом и весь список поддерживаемых форматов вы можете найти \
