--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -64,8 +64,7 @@ message.conversion.failed=Что то пошло не так. Запрос не 
 <b>Пожалуйста, сообщите об инциденте в</b> <a href="https://t.me/smart_file_utils_support"> \
 Службу поддержки</a>.
 message.damaged.file=Файл <b>поврежден</b> или <b>имеет неверный формат</b>. Он не может быть сконвертирован. \
-Возможно разработчики скоро исправят проблему и я смогу отправить вам файл позже. <b>Пожалуйста, сообщите об инциденте в</b> <a href="https://t.me/smart_file_utils_support"> \
-Службу поддержки</a>.
+Возможно разработчики скоро исправят проблему и я смогу отправить вам файл позже. <b>Пожалуйста, сообщите об инциденте в</b> <a href="https://t.me/smart_file_utils_support">Службу поддержки</a>.
 message.incompressible.video=Я не могу сжать это видео
 convert.command.description=конвертация
 language.command.description=изменить язык
