--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -3,7 +3,7 @@ Global navbatda joy: <b>{1}</b>
 message.files.queued=Fayllar bunga aylantirildi <b>{0}</b>\n\
 Global navbatdagi joy: <b>{0}</b>
 message.merge.files.queued=Fayllar bitta ga birlashtiriladi\n\
-Global navbatdagi joy: <b> {0} </ b>
+Global navbatdagi joy: <b>{0}</ b>
 message.file.format=Format: <b>{0}</b>
 message.file.size=Hajmi: <b>{0}</b>
 message.files.count=Fayllar soni: <b>{0}</b>
@@ -14,7 +14,7 @@ message.choose.target.extension.default.conversion=Men buni o'zgartira olaman! K
 Masalan, PDF-dagi rasmlar yoki PDF-fayllarni birlashtirish.
 message.choose.target.extension.video.audio.conversion=Men buni o'zgartira olaman! Konvertatsiya qilish uchun klaviaturangizdagi turini tanlang.
 message.unsupported.format=Hozircha men ushbu formatdagi fayllar bilan ishlashga qodir emasman. Siz qo'llab-quvvatlanadigan formatlarning ro'yxati \
-<a href="https://tgraph.io/Formats-05-14">SmartFileUtils bot</a> maqolasida topishingiz mumkin.
+<a href="https://tgraph.io/Formats-05-14">SmartFileUtils bot</a>maqolasida topishingiz mumkin</a>.
 message.unsupported.file=Ushbu formatdagi fayllar bilan qanday ishlashni bilmayman. Maym fayl turi <b>{0}</b>. Qo''llab-quvvatlanadigan formatlar ro''yxati siz \
 maqolada <a href="https://tgraph.io/Formats-05-14">SmartFileUtils bot</a>.
 message.query.item.not.found=So'rov topilmadi. Yoki u allaqachon tugatilgan yoki bekor qilingan yoki men ushbu faylni konvertatsiya qilayotganimda siz yangi fayl yuborgansiz.
@@ -24,12 +24,12 @@ Qo''shimcha ma''lumot olish uchun <a href="https://tgraph.io/Formats-05-14">Smar
 Yangiliklarni kuzatib boring, xabardor bo''lib boring; Biz bilan qoling! Ishlab chiquvchilar doimiy ravishda botni takomillashtirish ustida ishlamoqdalar. \
 Tez orada konvertatsiya qilish uchun yangi formatlarni ko''rasiz.\n\n\
 Agar xato topsangiz yoki bot ishini yaxshilash bo''yicha takliflaringiz bo''lsa yoki savollaringiz bo''lsa, bizga yozing \
-<a href="https://t.me/smart_file_utils_support"> Mijozlarni qo''llab-quvvatlash </a>. \
+<a href="https://t.me/smart_file_utils_support">Mijozlarni qo''llab-quvvatlash</a>. \
 Agar ba''zi bir format etishmayotgan bo''lsa, unda siz <a href="https://t.me/smart_file_utils_support">Yordam xizmati</a> \
 ga ham yozishingiz mumkin va tez orada u qo''llab-quvvatlanadigan formatlar ro''yxatida paydo bo''ladi.\n\n\
 Bot hech qanday cheklovlar qo''ymaydi.\n\
-Telegram quyidagi cheklovlarni joriy etadi: kirish va chiqish fayllari hajmi <b> 2000 MB </b> dan oshmasligi kerak. Agar o''lcham kattaroq bo''lsa, men sizga bu haqda xabar beraman.\n\n\
-<b> Mening so''rovlarim </b> bo''limida siz konvertatsiya qilish bo''yicha faol so''rovlar ro''yxati, ularning holati, qayta ishlash boshlangan vaqtni ko''rishingiz mumkin \
+Telegram quyidagi cheklovlarni joriy etadi: kirish va chiqish fayllari hajmi <b>2000MB</b> dan oshmasligi kerak. Agar o''lcham kattaroq bo''lsa, men sizga bu haqda xabar beraman. \n\n\
+<b>Mening so''rovlarim</b> bo''limida siz konvertatsiya qilish bo''yicha faol so''rovlar ro''yxati, ularning holati, qayta ishlash boshlangan vaqtni ko''rishingiz mumkin \
 va konversiya so''rovi haqidagi boshqa ma''lumotlar.\n\n\
 Mening buyruqlarim:\n\
 {0}
@@ -40,12 +40,12 @@ Qo''shimcha ma''lumot olish uchun <a href="https://tgraph.io/Formats-05-14">Smar
 Yangiliklarni kuzatib boring, xabardor bo''lib boring; Biz bilan qoling! Ishlab chiquvchilar doimiy ravishda botni takomillashtirish ustida ishlamoqdalar. \
 Tez orada yangi konvertatsiya qiluvchi formatlarni va yangi arxiv formatlarini ko''rasiz.\n\n\
 Agar xato topsangiz yoki bot ishini yaxshilash bo''yicha takliflaringiz bo''lsa yoki savollaringiz bo''lsa, bizga yozing \
-<a href="https://t.me/smart_file_utils_support"> Mijozlarni qo''llab-quvvatlash </a>. \
+<a href="https://t.me/smart_file_utils_support">Mijozlarni qo''llab-quvvatlash</a>. \
 Agar ba''zi bir format etishmayotgan bo''lsa, unda siz <a href="https://t.me/smart_file_utils_support">Yordam xizmati</a> \
 ga ham yozishingiz mumkin va tez orada u qo''llab-quvvatlanadigan formatlar ro''yxatida paydo bo''ladi.\n\n\
 Bot hech qanday cheklovlar qo''ymaydi.\n\
-Telegram quyidagi cheklovlarni joriy etadi: kirish va chiqish fayllari hajmi <b> 2000 MB </b> dan oshmasligi kerak. Agar o''lcham kattaroq bo''lsa, men sizga bu haqda xabar beraman.\n\n\
-<b> Mening so''rovlarim </b> bo''limida siz konvertatsiya qilish bo''yicha faol so''rovlar ro''yxati, ularning holati, qayta ishlash boshlangan vaqtni ko''rishingiz mumkin \
+Telegram quyidagi cheklovlarni joriy etadi: kirish va chiqish fayllari hajmi <b>2000MB</b> dan oshmasligi kerak. Agar o''lcham kattaroq bo''lsa, men sizga bu haqda xabar beraman.\n\n\
+<b> Mening so''rovlarim</b> bo''limida siz konvertatsiya qilish bo''yicha faol so''rovlar ro''yxati, ularning holati, qayta ishlash boshlangan vaqtni ko''rishingiz mumkin \
 va konversiya so''rovi haqidagi boshqa ma''lumotlar.\n\n\
 Mening buyruqlarim:\n\
 {0}
@@ -137,7 +137,7 @@ message.compressed.size=Asl hajmi: <b>{0}</b>\n\
 Siqilgandan keyingi o''lcham: <b>{1}</b>
 message.video.edit.welcome=Ruxsatni o'zgartirish uchun menga video yuboring. Faqat oxirgi yuklangan video o'zgartiriladi.
 message.video.edit.settings.resolution=Ruxsatni bunga o''zgartirish: <b>{0}</b>
-message.video.edit.settings.current.resolution=Joriy rezolyutsiya: <b> {0} </b>
+message.video.edit.settings.current.resolution=Joriy rezolyutsiya: <b>{0}</b>
 message.video.edit.settings.choose.resolution=Klaviaturadagi piksellar sonini tanlang va <b>Ruxsatni o'zgartirish</b> tugmasini bosing
 edit.video.command.description=Ruxsatni o'zgartirish
 message.choose.video.resolution=Klaviaturadagi piksellar sonini tanlang
