Fix message on uz

--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -14,7 +14,7 @@ message.choose.target.extension.default.conversion=Men buni o'zgartira olaman! K
 Masalan, PDF-dagi rasmlar yoki PDF-fayllarni birlashtirish.
 message.choose.target.extension.video.audio.conversion=Men buni o'zgartira olaman! Konvertatsiya qilish uchun klaviaturangizdagi turini tanlang.
 message.unsupported.format=Hozircha men ushbu formatdagi fayllar bilan ishlashga qodir emasman. Siz qo'llab-quvvatlanadigan formatlarning ro'yxati \
-<a href="https://tgraph.io/Formats-05-14">SmartFileUtils bot</a>maqolasida topishingiz mumkin</a>.
+<a href="https://tgraph.io/Formats-05-14">SmartFileUtils bot</a>maqolasida topishingiz mumkin.
 message.unsupported.file=Ushbu formatdagi fayllar bilan qanday ishlashni bilmayman. Maym fayl turi <b>{0}</b>. Qo''llab-quvvatlanadigan formatlar ro''yxati siz \
 maqolada <a href="https://tgraph.io/Formats-05-14">SmartFileUtils bot</a>.
 message.query.item.not.found=So'rov topilmadi. Yoki u allaqachon tugatilgan yoki bekor qilingan yoki men ushbu faylni konvertatsiya qilayotganimda siz yangi fayl yuborgansiz.
