--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -143,6 +143,5 @@ video.editing.resolution.changed=Original resolution: <b>{0}</b>\n\
 Result resolution: <b>{1}</b>
 message.video.resolution.the.same=Video already has the same resolution <b>{0}</b>
 message.video.resolution.cant.be.increased=Video resolution can''t be increased. The video has resolution <b>{0}</b> but you have chosen <b>{1}</b>.
-message.video.resolution.cant.be.increased.answer=Video resolution can''t be increased. The video has resolution {0} but you have chosen {1}. \
-Choose another resolution on the keyboard
-message.video.resolution.the.same.answer=Video already has the same resolution {0}. Choose another resolution on the keyboard
+message.video.resolution.will.be.decreased.warn=\ud83d\udca1<i>I can only decrease video resolution.</i>
+
