--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -148,6 +148,4 @@ video.editing.resolution.changed=Оригинальное разрешение: 
 Результирующее разрешение: <b>{1}</b>
 message.video.resolution.the.same=Видео уже имеет такое же разрешение <b>{0}</b>
 message.video.resolution.cant.be.increased=Разрешение видео не может быть увеличено. Видео сейчас имеет разрешение <b>{0}</b>, а вы выбрали <b>{1}</b>
-message.video.resolution.cant.be.increased.answer=Разрешение видео не может быть увеличено. Видео сейчас имеет разрешение {0}, а вы выбрали {1}. \
-Выберите другое разрешение на клавиатуре
-message.video.resolution.the.same.answer=Видео уже имеет такое же разрешение {0}. Выберите другое разрешение на клавиатуре
+message.video.resolution.will.be.decreased.warn=\ud83d\udca1<i>Я могу только уменьшить разрешение.</i>
