--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -149,6 +149,4 @@ video.editing.resolution.changed=Asl o''lcham: <b>{0}</b>\n\
 Natijada echim: <b>{1}</b>
 message.video.resolution.the.same=Video allaqachon bir xil rezolyutsiyaga ega <b>{0}</b>
 message.video.resolution.cant.be.increased=Video o''lchamini oshirib bo''lmaydi. Video endi <b>{0}</b> va siz <b>{1}</b> ni tanladingiz
-message.video.resolution.cant.be.increased.answer=Video o''lchamini oshirib bo''lmaydi. Video hozirda {0} da va siz {1} ni tanladingiz. \
-Klaviaturada boshqa o''lchamlarni tanlang
-message.video.resolution.the.same.answer=Video allaqachon bir xil piksellar soniga ega {0}. Klaviaturada boshqa o''lchamlarni tanlang
+message.video.resolution.will.be.decreased.warn=\ud83d\udca1<i>Men faqat video piksellar sonini kamaytira olaman.</i>
