Исправление ошибок сжатия аудио и видео

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -61,6 +61,7 @@ message.damaged.file=File is <b>damaged</b> or has <b>incorrect format</b> or <b
 It can't be converted. Perhaps the developers will fix a problem and I can send your file later. <b>Please, report the incident to</b> \
 <a href="https://t.me/smart_file_utils_support"> Customer service</a>.
 message.incompressible.video=I can't compress this video
+message.incompressible.audio=I can't compress this audio
 convert.command.description=conversion
 language.command.description=change language
 start.command.description=restart the bot
