--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -149,3 +149,4 @@ video.editing.resolution.changed=Оригинальное разрешение: 
 message.video.resolution.the.same=Видео уже имеет такое же разрешение <b>{0}</b>
 message.video.resolution.cant.be.increased=Разрешение видео не может быть увеличено. Видео сейчас имеет разрешение <b>{0}</b>, а вы выбрали <b>{1}</b>
 message.video.resolution.will.be.decreased.warn=\ud83d\udca1<i>Я могу только уменьшить разрешение.</i>
+message.incompressible.audio=Я не могу сжать это аудио
