--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -150,3 +150,4 @@ Natijada echim: <b>{1}</b>
 message.video.resolution.the.same=Video allaqachon bir xil rezolyutsiyaga ega <b>{0}</b>
 message.video.resolution.cant.be.increased=Video o''lchamini oshirib bo''lmaydi. Video endi <b>{0}</b> va siz <b>{1}</b> ni tanladingiz
 message.video.resolution.will.be.decreased.warn=\ud83d\udca1<i>Men faqat video piksellar sonini kamaytira olaman.</i>
+message.incompressible.audio=Ushbu audioni siqib ololmayapman
